New comment header

--- a/podcast-archive.twig
+++ b/podcast-archive.twig
@@ -1,4 +1,5 @@
-{# Metaebene podcast-archive template v1.3 #}
+{# Template: podcast-archive template #}
+{# Version: 1.3 #}
 
 {# group - define the contributor group to be listed #}
 {# role - define the contributor role to be listed #}
